# learning-py

./: .gitignore  .gitmodules  README.md
AsyncioInPython/: README.md  requirements.txt
AsyncioInPython/Ch2_Threads/: cutlery.py  thread_bot.py
AsyncioInPython/Ch3_AsyncioWalkThrough/: alltaskscomplete.py  async_comprehensions.py  async_context_managers.py  async_functions.py  async_iterators.py  executor_iterface.py  executor_shutdown.py  futures.py  hello_asio.py  pending_task_error.py  signal_01.py  signal_02.py  signal_02b.py  telnetecho.py
AsyncioInPython/Ch4_AsyncioLibraries/: get_http_headers.py  janus_queue.py  mq_server.py  mq_server_1.py  mq_server_2.py  msg_client_listen.py  msg_client_sender.py  msgproto.py  sockets_demo.py  tcp_echo_client.py  tcp_echo_server.py
AsyncioInPython/async_await_from_ground_up/: aecho.py  aecho_fake_asyncio.py  fake_asyncio.py
BlackbeltPython/Ch10_Performance/: readme.md
BlackbeltPython/Ch11_ScalingAndArchitecture/: demo_multiprocessing.py  demo_threads.py  demo_zeromq.py  readme.md
BlackbeltPython/Ch6_Testing/mylib/: requirements.txt  setup.cfg  setup.py  tox.ini
BlackbeltPython/Ch6_Testing/mylib/mylib/tests/: pytest.ini  test_mark.py  test_mocking.py  test_skip.py  test_true.py
FastAPI/fastapi_rest_udemy/03_authentication/: main.py  pyproject.toml  requirements.txt
FastAPI/fastapi_rest_udemy/03_authentication/migrations/versions/: 7d3d70e1ec5f_add_userrole.py
PythonCICD/: jenkins.dockerfile
PythonConcurrencyWithAsyncio/: .gitignore  requirements.txt
learning_pytest/: README.md  requirements.txt
learning_pytest/Ch15_BuildingPlugins/pytest_skip_slow/: LICENSE  README.md  pyproject.toml  pytest_skip_slow.py  tox.ini
learning_pytest/Ch15_BuildingPlugins/pytest_skip_slow/examples/: test_slow.py
learning_pytest/Ch15_BuildingPlugins/pytest_skip_slow/tests/: test_plugin.py
pySkeleon/: README.rst  requirements.txt  setup.py
pydantic/: dummy.py  requirements.txt
skeleton/: setup.py
(+859 files in other folders)
