[metadata]
name = foobar
autor = jamcodes
author-email = foobar@example.com
license = MIT
long_description = file: README.rst
url = http://pypi.python.org/pypi/foobar
requires-python = >=3.5
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  License :: OSI Approved :: MIT
  Operating System :: OS Independent
  Programming Language :: Python
